--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mysql2": "^3.3.1",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "body-parser": "^1.20.2"
   },
   "devDependencies": {
     "chai": "^4.3.7",
